--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ html {
 body {
     margin:0;
     font-family: 'Rubik', sans-serif;
+    background-color: #fff;
+background-image:
+linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+linear-gradient(#eee .1em, transparent .1em);
+background-size: 100% 1.2em;
 }
 
 
@@ -211,7 +216,7 @@ main {
 }
 
 .hr-1 { 
-    border:solid rgb(139, 173, 197) 3px;
+    border:solid rgb(101, 153, 168) 3px;
     border-radius:10px 10px 10px 10px;
     width:100%;
 }
@@ -313,7 +318,7 @@ text-align: center;
 
 h1 {
     margin-bottom: 40px;
-    color:rgb(139, 173, 197);
+    color:rgb(101, 153, 168);
     font-size: 28px;
     margin:0 auto;
     margin-top:200px;
@@ -321,11 +326,11 @@ h1 {
 }
 
 h3 {
-    margin-top: 80px;
+    margin-top: 100px;
 }
 
 h4 {
-    margin-top: 100px; 
+    margin-top: 100px;
 }
 
 
@@ -367,9 +372,25 @@ h4 {
 
 }
 
+.alle-img {
+    display:flex;
+    justify-content: center;
+    border-radius:20px;
+
+}
+
+.js-einbinden {
+    width:600px;
+    display:flex;
+    justify-content: center;
+    border-radius:20px;
+
+}
+
 .tg  {border-collapse:collapse;border-spacing:0;margin-top:50px;display:flex;justify-content: center;}
 .tg td{font-family: 'Rubik', sans-serif; font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg th{font-family: 'Rubik', sans-serif; font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg .tg-u6bb{font-family: 'Rubik', sans-serif !important;;background-color:#b1bbb9;border-color:#b1bbb9;text-align:center;vertical-align:top}
 .tg .tg-0o9u{font-family: 'Rubik', sans-serif !important;;background-color:#b1bbb9;border-color:#b1bbb9;text-align:left}
 .tg .tg-5j0w{border-color:#a0a7a5;text-align:left;vertical-align:top}
+
